--- a/task.html
+++ b/task.html
@@ -6,11 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task</title>
+    <link rel="stylesheet" href="./style.css">
+    <style>
+        /* external css */
+    </style>
 </head>
 
 <body>
-    <center>
-        <div style="margin-top: 50px; width: 500px; height: 300px; border: 10px solid #333;border-radius: 10px;">
+        <div
+            style=" margin: 50px auto; text-align: center; width: 500px; height: 300px; border: 10px solid #333;border-radius: 10px;">
 
             <form>
                 <h1>Log In</h1>
@@ -21,7 +25,7 @@
 
 
         </div>
-    </center>
+
 
 </body>
 
