--- a/task.html
+++ b/task.html
@@ -6,25 +6,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task</title>
-    <link rel="stylesheet" href="./style.css">
     <style>
-        /* external css */
+       #meee {
+            margin: 50px auto;
+            text-align: center;
+            width: 500px;
+            height: 300px;
+            border: 10px solid #333;
+            border-radius: 10px;
+        }
     </style>
 </head>
 
 <body>
-        <div
-            style=" margin: 50px auto; text-align: center; width: 500px; height: 300px; border: 10px solid #333;border-radius: 10px;">
+    <div id="meee">
 
-            <form>
-                <h1>Log In</h1>
-                <input type="text" placeholder="Email"><br>
-                <input type="password" placeholder="Password"><br>
-                <button>Log In</button>
-            </form>
+        <form>
+            <h1>Log In</h1>
+            <input type="text" placeholder="Email"><br>
+            <input type="password" placeholder="Password"><br>
+            <button>Log In</button>
+        </form>
 
 
-        </div>
+    </div>
 
 
 </body>
