--- a/Ecommerce/index.html
+++ b/Ecommerce/index.html
@@ -31,7 +31,7 @@
     <main>
         <div class="container">
             <div class="slider">
-                <img src="https://source.unsplash.com/user/erondu/1000x300/?cricket, Ecommerce" alt="images">
+                <img src="https://source.unsplash.com/user/erondu/?cricket" alt="images">
             </div>
             <div class="item-container">
                 <div class="item-border">
